@@ -2,19 +2,16 @@ package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
+import org.springframework.stereotype.Repository;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
+//@Repository
 public class JCFChannelRepository implements ChannelRepository {
-
-    private final static BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));
     private final List<Channel> data;
 
     public JCFChannelRepository(){
@@ -28,12 +25,11 @@ public class JCFChannelRepository implements ChannelRepository {
     }
 
     @Override
-    public Channel find(UUID id) {
+    public Optional<Channel> findById(UUID id) {
 
         return findAll().stream()
                 .filter(c -> c.getId().equals(id))
-                .findFirst()
-                .orElseThrow(NoSuchElementException::new);
+                .findFirst();
     }
 
     @Override
@@ -46,11 +42,19 @@ public class JCFChannelRepository implements ChannelRepository {
 
         return findAll().stream()
                 .filter(c -> c.getName().contains(name))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public boolean existsById(UUID id) {
+        return findAll().stream().anyMatch(c -> c.getId().equals(id));
+    }
+
+    public boolean existsByName(String name) {
+        return findAll().stream().anyMatch(c -> c.getName().contains(name));
     }
 
     @Override
-    public void delete(UUID id) {
+    public void deleteById(UUID id) {
         this.data.removeIf(c -> c.getId().equals(id));
     }
 
